# IMS_TESTBED

./: .env  .env.example  .gitignore  1-단말기준-SIP-메시지-전체분류-및-정의.md  AGENTS.md  CLAUDE.md  PRD.md  README.md  REQUEST.md  RESPONSE.md  docker-compose.yml  pyproject.toml
.claude/commands/: explain-issue.md  fix-issue.md  fuzz.md  server.md
.github/workflows/: ci.yml
docs/: EPC_ENB_ATTACH_RUNBOOK.md  MT-INVITE-템플릿-필드-해설.md  PRODUCTION_FUZZER_GUIDE.md  README.md  REAL_SIM_ATTACH_CHECKLIST.md  SIP-프로토콜-연구-종합.md  USAGE.md  iOS_LOG_COLLECTION.md  구현-문서.md  발전-로드맵.md  프로젝트-개요.md
docs/결과/: GENERATOR-구현-결과.md  PHASE4-REAL-UE-SOFTPHONE-후속-리서치.md  PHASE4-SENDER-REACTOR-리서치.md  SIP-공격면-우선순위표.md  SIP-완전-독립-연구-결과-보고서.md  SIP-통합-연구-보고서.md
docs/기획/: GENERATOR_PRD.md  MUTATOR_PRD.md  PHASE4_PRD.md  PRD.md  REAL_UE_DIRECT_PRD.md
docs/이슈/: 2026-04-12-워크로그.md  2026-04-13-워크로그.md  2026-04-15-SMSC-iFC-비활성화.md  2026-04-15-워크로그.md  2026-04-15-패킷-구현-현황.md  2026-05-02-MESSAGE-송수신-트러블슈팅-체크리스트.md  2026-05-02-SMS-over-IMS-1단계-구축.md  Capstone-Dumpipe-IPsec-우회-분석.md  오픈-이슈.md
docs/프로토콜/: SIP-IANA-URI-파라미터-전수조사.md  SIP-IANA-값-레지스트리-전수조사.md  SIP-IANA-기능-식별자-전수조사.md  SIP-IANA-기타-레지스트리-survey.md  SIP-IANA-리소스-우선순위-전수조사.md  SIP-IANA-메서드-응답코드-전수조사.md  SIP-IANA-옵션-태그-전수조사.md  SIP-IANA-전체-필드-전수조사.md  SIP-IANA-헤더-필드-파라미터-전수조사.md  SIP-요청-응답-오피셜-필드-리서치.md  SIP-요청-응답-패킷-필드-비교-매트릭스.md  요청-패킷-예시.md  응답-패킷-예시.md
infrastructure/dns/: ims_zone
infrastructure/log/: docker_ps_success.txt
infrastructure/pcscf/route/: mo.cfg  mt.cfg  register.cfg
infrastructure/smf/: ip_utils.py
infrastructure/smsc/: Dockerfile  sms_parser.py  smsc_server.py
infrastructure/smsc/logs/: 20260502T102753.980302Z_udp_MESSAGE.json  20260502T102909.038315Z_udp_MESSAGE.json  20260502T114424.840212Z_udp_MESSAGE.json  20260502T115034.077671Z_udp_MESSAGE.json  20260502T115039.083432Z_forward.json  20260502T120240.697394Z_udp_MESSAGE.json  20260502T120240.801647Z_udp_MESSAGE.json  20260502T120240.802070Z_forward.json  20260502T120243.663134Z_udp_response_408_Request_Timeout.json  20260502T120243.663565Z_forward.json  20260502T121805.674966Z_udp_MESSAGE.json  20260502T121808.662454Z_udp_response_408_Request_Timeout.json  20260502T121808.662843Z_forward.json  20260502T122533.997154Z_udp_MESSAGE.json  (+153 more)
infrastructure/upf/: tun_if.py
results/20260502_092454_e1611f07/: campaign.jsonl
results/20260502_092754_607ba417/: campaign.jsonl  report.html
results/20260502_092831_13d620c1/: campaign.jsonl  report.html
results/20260502_093159_f346d62e/: campaign.jsonl  report.html
results/20260502_094040_0f175ee0/: campaign.jsonl  report.html
results/20260502_094444_43b4d8d6/: campaign.jsonl  report.html
results/20260502_094823_e667f544/: campaign.jsonl  report.html
results/20260502_095123_82060c27/: campaign.jsonl  report.html
results/20260502_100815_fb086b10/: campaign.jsonl  report.html
results_wireshark/: smsc(202)_542.pcapng  smsc(408)_test11.pcapng
results_wireshark/260502/: invite(call)_542to528.pcapng  message_542to528.pcapng  register_528.pcapng
results_wireshark/260506/: another_phone_sip_only_connect.pcapng  smsc_msgtest2_528to542.pcapng  smsc_msgtest3_528to542.pcapng  smsc_msgtest4_528to542.pcapng
results_wireshark/260507/: smsc_success_final.pcapng
scripts/: add_ue_routes.py  crash_analyzer.py  generate_packet_docs.py  install_system_deps.sh  run_baresip.py  watch_fuzzing.sh
src/volte_mutation_fuzzer/: __init__.py  packet_docs.py  softphone.py
tests/: test_pyproject_tasks.py  test_sip_catalog.py  test_softphone.py
tests/adb/: test_contracts.py  test_core.py  test_patterns.py
tests/campaign/: test_cli.py  test_contracts.py  test_core.py  test_crash_analysis.py  test_dialog_integration.py
tests/capture/: test_core.py
tests/dialog/: _dialog_server.py  test_contracts.py  test_core.py  test_scenarios.py  test_state_extractor.py
tests/generator/: test_cli.py  test_contracts.py  test_core.py  test_mt_packet.py
tests/infrastructure/: test_smsc_sms_parser.py
tests/ios/: test_core.py  test_patterns.py
tests/mutator/: test_bytes.py  test_cli.py  test_contracts.py  test_core.py  test_editable.py
tests/oracle/: test_contracts.py  test_core.py
tests/sender/: _server.py  test_cli.py  test_core.py  test_real_ue.py
tests/sip/: test_response_policy.py
(+78 files in other folders)
