[project]
name = "volte-mutation-fuzzer"
version = "0.1.0"
description = "Terminal-oriented SIP mutation fuzzer catalog and packet schemas"
readme = "README.md"
authors = [
    { name = "Chae-JS", email = "jschae02@khu.ac.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
volte-mutation-fuzzer = "volte_mutation_fuzzer:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
