[project]
name = "volte-mutation-fuzzer"
version = "0.1.0"
description = "Terminal-oriented SIP mutation fuzzer catalog and packet schemas"
readme = "README.md"
authors = [
    { name = "Chae-JS", email = "jschae02@khu.ac.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.16.0",
]

[project.scripts]
fuzzer = "volte_mutation_fuzzer.generator.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.poe.tasks]
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"
type-check = "ty check"
