[project]
name = "volte-mutation-fuzzer"
version = "0.1.0"
description = "Terminal-oriented SIP mutation fuzzer catalog and packet schemas"
readme = "README.md"
authors = [
    { name = "Chae-JS", email = "jschae02@khu.ac.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.16.0",
]

[project.scripts]
fuzzer = "volte_mutation_fuzzer.generator.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.poe.tasks]
format = "ruff format ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"
type-check = "ty check"
softphone-run = "python scripts/run_baresip.py"
softphone-setup = "python scripts/setup_baresip.py"
enb-stop = {shell = "docker rm -f srsenb 2>/dev/null || true", help = "Stop srsENB container"}
enb-logs = {shell = "docker logs -f srsenb", help = "Tail srsENB container logs"}

[tool.poe.tasks.enb-run]
help = "Run srsENB (USRP B210) in Docker container"
shell = """
docker rm -f srsenb 2>/dev/null || true
docker run -d \
  --name srsenb \
  --privileged \
  --network docker_open5gs_default \
  --ip 172.22.0.50 \
  -e COMPONENT_NAME=enb \
  -e MME_IP=172.22.0.9 \
  -e MCC=001 \
  -e MNC=01 \
  -e TAC=1 \
  -v "$(pwd)/infrastructure/srsenb:/etc/srsran" \
  -v "$(pwd)/infrastructure/srslte:/mnt/srslte" \
  -v /dev/bus/usb:/dev/bus/usb \
  docker_srslte:latest
echo "srsenb started. Run 'poe enb-logs' to tail logs."
"""

# === Infrastructure ===
epc-run = "docker compose up -d"
epc-stop = "docker compose down"
epc-status = "docker compose ps"
epc-logs = "docker compose logs -f"

[tool.poe.tasks.epc-build]
help = "Build docker_open5gs, docker_kamailio base images and all services"
shell = """
echo '[1/3] Building docker_open5gs base image...'
docker build --force-rm -t docker_open5gs ./infrastructure/base
echo '[2/3] Building docker_kamailio base image...'
docker build --force-rm -t docker_kamailio ./infrastructure/ims_base
echo '[3/3] Building all services...'
docker compose build
echo 'Done'
"""

[tool.poe.tasks.provision]
help = "Provision test subscribers to Open5GS HSS (MongoDB) and PyHSS (MySQL)"
cmd = "python scripts/provision_subscribers.py"

[tool.poe.tasks.tcpdump]
help = "Capture traffic inside a Docker container (usage: poe tcpdump <container> [protocol])"
cmd = "python scripts/tcpdump.py ${args}"
args = [{name = "args", positional = true, multiple = true}]

[tool.poe.tasks.setup-host]
help = "Setup Ubuntu host: kernel modules, network sysctl, SDR udev, realtime scheduling"
cmd = "sudo ./setup_host.sh --all"

[tool.poe.tasks.add-ue-routes]
help = "Add host routes to UE subnets (10.10.10.0/24, 10.20.20.0/24) via UPF — required for real-ue-direct fuzzing"
shell = """
sudo ip route replace 10.10.10.0/24 via 172.22.0.8
sudo ip route replace 10.20.20.0/24 via 172.22.0.8
echo "Routes added:"
ip route show | grep -E '10\\.10\\.|10\\.20\\.'
"""
